# pyls_project

./: LICENSE  README.md  pyproject.toml
data/: structure.json
src/pyls/: main.py
tests/: test_pyls.py
