[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A custom implementation of the ls command for JSON structured directories."
authors = [{ name = "Ashish Mahendra", email = "ashishmahendra@live.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
pyls = "pyls.main:main"

[tool.setuptools]
packages = ["pyls"]
package-dir = {"" = "src"}
